--- a/package.json
+++ b/package.json
@@ -18,27 +18,31 @@
     "fly": "fly",
     "serve": "fly serve",
     "watch": "fly watch",
-    "test": "xo && ava"
+    "test": "ava"
   },
   "files": [
     "index.js"
   ],
   "keywords": [
-    "fly", "starter", "kit", "boilerplate"
+    "boilerplate",
+    "fly",
+    "kit",
+    "starter",
+    "webapp"
   ],
   "dependencies": {},
   "devDependencies": {
     "ava": "^0.8.0",
     "browser-sync": "^2.10.0",
+    "eslint-config-xo": "^0.9.0",
     "fly": "^0.8.4",
+    "fly-babel": "lukeed/fly-babel#79a70a37e6be1abbdd548bb1f0ec26d4ca54313e",
     "fly-eslint": "^1.0.0",
     "fly-sass": "^0.3.0",
     "fly-uglify": "^1.0.0",
-    "fly-useref": "^0.1.0",
-    "fly-babel": "lukeed/fly-babel#79a70a37e6be1abbdd548bb1f0ec26d4ca54313e",
-    "xo": "^0.12.1"
+    "fly-useref": "^0.1.0"
   },
-  "xo": {
-    "ignores": ["test.js"]
+  "eslintConfig": {
+    "extends": "xo/esnext"
   }
 }
