--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "eslint-plugin-babel": "^3.0.0",
     "fly": "^0.8.4",
     "fly-autoprefixer": "^0.2.0",
-    "fly-babel": "bucaran/fly-babel#68cf7ec195ce148cb655f729b9f23a497bc85401",
+    "fly-babel": "^0.7.0",
     "fly-eslint": "^1.0.0",
     "fly-sass": "^0.3.0",
     "fly-uglify": "^1.0.0",
