--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "fly-autoprefixer": "^0.2.0",
     "fly-babel": "^0.7.0",
     "fly-eslint": "^1.0.0",
+    "fly-rev": "^0.8.0",
     "fly-sass": "^0.3.0",
     "fly-uglify": "^1.0.0",
     "fly-useref": "^0.1.0"
