remove useref & add keyword

--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
   },
   "keywords": [
     "boilerplate",
-    "fly",
-    "kit",
     "starter",
-    "webapp"
+    "webapp",
+    "kit",
+    "fly"
   ],
   "dependencies": {},
   "devDependencies": {
@@ -40,7 +40,6 @@
     "fly-eslint": "^1.0.0",
     "fly-rev": "^0.8.0",
     "fly-sass": "^0.3.0",
-    "fly-uglify": "^1.0.0",
-    "fly-useref": "^0.1.0"
+    "fly-uglify": "^1.0.0"
   }
 }
