restructure fly tasks

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "build": "fly build",
     "fly": "fly",
-    "serve": "fly serve",
+    "serve": "fly build && fly serve",
     "watch": "fly watch",
     "test": "ava"
   },
