--- a/app/manifest.json
+++ b/app/manifest.json
@@ -2,19 +2,19 @@
 	"name": "Fly Starter Kit",
 	"short_name": "FSK",
 	"icons": [{
-		"src": "images/touch/icon-128x128.png",
+		"src": "img/touch/icon-128x128.png",
 		"sizes": "128x128",
 		"type": "image/png"
 	}, {
-		"src": "images/touch/apple-touch-icon.png",
+		"src": "img/touch/apple-touch-icon.png",
 		"sizes": "152x152",
 		"type": "image/png"
 	}, {
-		"src": "images/touch/ms-touch-icon-144x144-precomposed.png",
+		"src": "img/touch/ms-touch-icon-144x144-precomposed.png",
 		"sizes": "144x144",
 		"type": "image/png"
 	}, {
-		"src": "images/touch/chrome-touch-icon-192x192.png",
+		"src": "img/touch/chrome-touch-icon-192x192.png",
 		"sizes": "192x192",
 		"type": "image/png"
 	}],
