use fly-eslint-xo instead of direct deps

--- a/package.json
+++ b/package.json
@@ -30,14 +30,12 @@
   "dependencies": {},
   "devDependencies": {
     "ava": "^0.11.0",
-    "babel-eslint": "^4.1.6",
     "browser-sync": "^2.10.0",
-    "eslint-config-xo": "^0.9.0",
-    "eslint-plugin-babel": "^3.0.0",
     "fly": "^0.8.5",
     "fly-autoprefixer": "^0.2.0",
     "fly-babel": "^0.7.0",
     "fly-eslint": "^1.0.0",
+    "fly-eslint-xo": "^1.0.0",
     "fly-rev": "^0.8.0",
     "fly-sass": "^0.3.0",
     "fly-uglify": "^1.0.0"
