install fly-htmlmin

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "fly-babel": "^0.7.0",
     "fly-eslint": "^1.0.0",
     "fly-eslint-xo": "^1.0.0",
+    "fly-htmlmin": "^1.0.0",
     "fly-rev": "^0.8.0",
     "fly-sass": "^0.3.0",
     "fly-uglify": "^1.0.0"
