--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": {
     "name": "Luke Edwards",
     "email": "luke.edwards05@gmail.com",
-    "url": "lukeed.com"
+    "url": "https://lukeed.com"
   },
   "engines": {
     "iojs": ">= 1.0.0",
@@ -18,7 +18,7 @@
     "fly": "fly",
     "serve": "fly build && fly serve",
     "watch": "fly watch",
-    "test": "ava"
+    "test": "echo No tests specified, yet."
   },
   "keywords": [
     "boilerplate",
@@ -29,7 +29,6 @@
   ],
   "dependencies": {},
   "devDependencies": {
-    "ava": "^0.11.0",
     "browser-sync": "^2.10.0",
     "fly": "^0.8.5",
     "fly-autoprefixer": "^0.2.0",
