--- a/package.json
+++ b/package.json
@@ -38,5 +38,10 @@
     "fly-sass": "^0.3.0",
     "fly-uglify": "^1.0.0",
     "fly-xo": "^1.0.0"
+  },
+  "xo": {
+    "ignore": [
+      "flyfile.js"
+    ]
   }
 }
