set xo as direct dev-dep, for node <= 4

--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "fly-rev": "^0.8.0",
     "fly-sass": "^0.3.0",
     "fly-uglify": "^1.0.0",
-    "fly-xo": "^1.0.0"
+    "fly-xo": "^1.0.0",
+    "xo": "*"
   },
   "xo": {
     "ignore": [
