--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
   ],
   "dependencies": {},
   "devDependencies": {
+    "babel-preset-es2015": "^6.3.13",
+    "babelify": "^7.2.0",
     "browser-sync": "^2.10.0",
     "fly": "^0.8.5",
     "fly-autoprefixer": "^0.2.0",
-    "fly-babel": "^0.7.0",
+    "fly-browserify": "^0.1.2",
     "fly-htmlmin": "^1.0.0",
     "fly-rev": "^0.8.0",
     "fly-sass": "^0.3.0",
