add feature keywords

--- a/package.json
+++ b/package.json
@@ -21,9 +21,27 @@
     "test": "xo"
   },
   "keywords": [
+    "minification",
     "boilerplate",
+    "autoprefix",
+    "versioning",
+    "busting",
+    "version",
+    "browser",
     "starter",
+    "offline",
+    "service",
+    "eslint",
+    "minify",
+    "worker",
     "webapp",
+    "cache",
+    "sync",
+    "sass",
+    "web",
+    "app",
+    "xo",
+    "css",
     "kit",
     "fly"
   ],
