--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 sudo: false
 language: node_js
-depth: 1
+
+git:
+  depth: 1
+
 node_js:
   - '5'
   - '4'
@@ -11,3 +14,4 @@ install:
 
 script:
   - echo No build task needed.
+  - npm test
