update deps & XO rules

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "fly-kit-web",
   "version": "1.1.2",
-  "description": "Starter Kit for scaffolding a Web App with Fly",
+  "private": true,
+  "description": "A lean Web App starter kit with Fly",
   "license": "MIT",
   "repository": "lukeed/fly-kit-web",
   "author": {
@@ -9,62 +10,46 @@
     "email": "luke.edwards05@gmail.com",
     "url": "https://lukeed.com"
   },
-  "engines": {
-    "iojs": ">= 1.0.0",
-    "node": ">= 0.11.0"
-  },
   "scripts": {
-    "build": "fly build",
     "fly": "fly",
-    "serve": "fly build && fly serve",
-    "watch": "fly watch",
+    "build": "fly build",
+    "release": "fly release",
+    "start": "fly build serve",
+    "watch": "fly",
     "test": "xo"
   },
-  "keywords": [
-    "minification",
-    "boilerplate",
-    "autoprefix",
-    "versioning",
-    "busting",
-    "version",
-    "browser",
-    "starter",
-    "offline",
-    "service",
-    "eslint",
-    "minify",
-    "worker",
-    "webapp",
-    "cache",
-    "sync",
-    "sass",
-    "web",
-    "app",
-    "xo",
-    "css",
-    "kit",
-    "fly"
-  ],
   "dependencies": {},
   "devDependencies": {
-    "babel-preset-es2015": "^6.3.13",
-    "babelify": "^7.2.0",
-    "browser-sync": "^2.10.0",
-    "fly": "^1.0.0",
-    "fly-autoprefixer": "^0.2.0",
-    "fly-browserify": "^1.0.0",
-    "fly-htmlmin": "^1.0.0",
-    "fly-precache": "^1.0.0",
-    "fly-rev": "^1.0.0",
-    "fly-sass": "^1.0.0",
-    "fly-uglify": "^1.0.0",
-    "fly-xo": "^1.0.0",
+    "browser-sync": "^2.17.5",
+    "fly": "beta",
+    "fly-autoprefixer": "^1.0.0",
+    "fly-browserify2": "^2.0.1",
+    "fly-concat": "^1.1.0",
+    "fly-esnext": "^2.0.0",
+    "fly-htmlmin": "^2.0.0",
+    "fly-rev": "^2.0.0",
+    "fly-riot": "^2.0.0",
+    "fly-sass": "^2.0.0",
+    "fly-uglify": "^2.0.0",
+    "fly-xo": "^2.0.0",
     "xo": "*"
   },
+  "engines": {
+    "node": ">= 4.6.0"
+  },
   "xo": {
+    "envs": [
+      "browser"
+    ],
     "globals": [
-      "window",
-      "navigator"
-    ]
+      "riot"
+    ],
+    "ignores": [
+      "flyfile.js",
+      "release/**"
+    ],
+    "rules": {
+      "guard-for-in": 1
+    }
   }
 }
