--- a/package.json
+++ b/package.json
@@ -20,17 +20,19 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "browser-sync": "^2.17.5",
-    "fly": "beta",
-    "fly-autoprefixer": "^1.0.0",
-    "fly-browserify2": "^2.0.1",
-    "fly-concat": "^1.1.0",
+    "browser-sync": "^2.18.7",
+    "fly": "^2.0.0",
+    "fly-autoprefixer": "^1.1.0",
+    "fly-browserify2": "^2.1.0",
+    "fly-clear": "^1.0.0",
+    "fly-concat": "^1.2.0",
     "fly-esnext": "^2.0.0",
-    "fly-htmlmin": "^2.0.0",
-    "fly-rev": "^2.0.0",
+    "fly-htmlmin": "^2.1.0",
+    "fly-rev": "^2.2.0",
     "fly-sass": "^2.0.0",
-    "fly-uglify": "^2.0.0",
-    "fly-xo": "^2.0.0",
+    "fly-uglify": "^2.1.0",
+    "fly-watch": "^1.0.0",
+    "fly-xo": "^2.1.0",
     "xo": "*"
   },
   "engines": {
