--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "fly-esnext": "^2.0.0",
     "fly-htmlmin": "^2.1.0",
     "fly-rev": "^2.2.0",
-    "fly-sass": "^2.0.0",
+    "fly-sass": "lukeed/fly-sass",
     "fly-uglify": "^2.1.0",
     "fly-watch": "^1.0.0",
     "fly-xo": "^2.1.0",
